# travel-map

./: .pre-commit-config.yaml  .prettierignore  Justfile  README.md  lefthook.yml
.github/: copilot-instructions.md  dependabot.yml
.github/actions/setup-test-dependencies/: action.yml
.github/actions/setup-website-dependencies/: action.yml
.github/tool-configurations/: .linkspector.yml  labeller.yml
.github/workflows/: clean-caches.yml  code-checks.yml  deploy,yml  deploy.yml  pull-request-tasks.yml  sync-labels.yml
docs/: SECURITY.md
tests/: pyproject.toml  test_website.py  tests.just
website/: eslint.config.js  index.html  package-lock.json  package.json  prettier.config.js  vite.config.js  website.just
website/public/: .htaccess  _headers  robots.txt  sitemap.xml
website/public/.well-known/: security.txt
website/src/: main.js  security.js  travel-map.js
