[project]
name = "tests"
dynamic = ["version"]
requires-python = "~=3.14.0"
dependencies = [
  "pytest==8.4.2",
  "playwright==1.56.0",
  "pytest-playwright==0.7.1",
]

[project.optional-dependencies]
dev = ["ruff==0.14.4", "ty==0.0.1a25"]

[tool.uv]
required-version = "~=0.9.0"
package = false

[tool.ruff]
target-version = "py314"

[tool.ruff.lint]
select = ["ALL"]

ignore = [
  "COM812",  # Ignore due to conflict with Ruff formatter
  "ISC001",  # Ignore due to conflict with Ruff formatter
  "PLR2004", # Ignore magic value
  "D104",    # Ignore missing docstring in public package
  "D100",    # Ignore missing docstring in public module
  "T201",    # Ignore print statement (until we have a logger)
  "S101",    # Ignore asserts
  "F811",    # Ignore redefinition of function
  "G004",    # Ignore logging format string
]

fixable = ["ALL"]

[tool.ruff.lint.per-file-ignores]
"**test_*.py" = ["S101", "D102", "SLF001", "PT019"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
known-first-party = ["tests", "utils"]
