[project]
name = "tests"
dynamic = ["version"]
requires-python = "~=3.14.0"
dependencies = [
  "pytest==9.1.1",
  "playwright==1.61.0",
  "pytest-playwright==0.8.0",
]

[project.optional-dependencies]
dev = [
  "ruff==0.15.20",
  "ty==0.0.55"
  ]

[tool.uv]
required-version = "~=0.11.0"
package = false
override-dependencies = [
  "Pygments==2.20.0",
  "idna==3.18",
  "requests==2.34.2",
  "urllib3==2.7.0",
]

[tool.ruff]
target-version = "py314"

[tool.ruff.lint]
select = ["ALL"]

ignore = [
  "COM812",  # Ignore due to conflict with Ruff formatter
  "ISC001",  # Ignore due to conflict with Ruff formatter
  "PLR2004", # Ignore magic value
  "D104",    # Ignore missing docstring in public package
  "D100",    # Ignore missing docstring in public module
  "T201",    # Ignore print statement (until we have a logger)
  "S101",    # Ignore asserts
  "F811",    # Ignore redefinition of function
  "G004",    # Ignore logging format string
]

fixable = ["ALL"]

[tool.ruff.lint.per-file-ignores]
"**test_*.py" = ["S101", "D102", "SLF001", "PT019"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
known-first-party = ["tests", "utils"]
